deployments/rocksolid/virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rocksolid-vs
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
    - uri:
        prefix: "/rocksolid"
      ignoreUriCase: true
    route:
    - destination:
        host: rocksolid-v1
        subset: v1
      weight: 50
    - destination:
        host: rocksolid-v2
        subset: v2
      weight: 50
